Setting Up Site
Edited site to show what the site is about

--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<h1>The Evolved Network from DavisAllDay!</h1>
+<h3>This is the Evolved Network Being Build By DavisAllDayaka Adam Davis!</h3>
+<b>My Website Network is being built to help grow the internet for the better by bringing better content, information, tools, and services to the community!
+
+Here is the beginning to it:
+</b>
+<p><a href="https://taxrefundloans.org/getting-started-education">Getting Started with Tax Refund Loans</a></p>
+
 </body>
 </html>
